--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "keywords": [
     "template",
     "engine",
-    "nunjucks",
-    "doT"
+    "laravel",
+    "blade"
   ],
   "author": "Jonathan Irhodia",
   "license": "MIT",
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/elcharitas/waxe#readme",
   "devDependencies": {
-    "@types/node": "^14.14.20"
+    "@types/node": "^14.14.20",
+    "typescript": "^4.0.3"
   }
 }
