--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "homepage": "https://github.com/elcharitas/waxe#readme",
   "devDependencies": {
     "@types/node": "^14.14.20",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "browserify": "^17.0.0",
+    "uglify-js": "^3.11.0",
+    "npm-run-all": "^4.1.5"
   }
 }
