--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.0.3",
     "browserify": "^17.0.0",
     "uglify-js": "^3.11.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "mocha": "^8.2.1"
   }
 }
