--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "mocha",
     "schip": "schip compile dist/example.waxe",
-    "docs": "docpress build",
+    "docs": "typedoc src --tsconfig src/tsconfig.json --options docs/options.json",
     "build:src": "rm -rf lib && tsc -b src",
     "build:dist": "browserify lib/waxe.js -s Wax > dist/waxe.js",
     "build:ugly": "uglifyjs -c 'expression=true,unsafe_proto=true,unsafe=true' -m -o dist/waxe.min.js dist/waxe.js",
@@ -40,7 +40,7 @@
     "browserify": "^17.0.0",
     "uglify-js": "^3.11.0",
     "npm-run-all": "^4.1.5",
-    "docpress": "^0.8.2",
+    "typedoc": "^0.20.13",
     "git-update-ghpages": "^1.3.0",
     "schip": "^0.0.1",
     "mocha": "^8.2.1"
