--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "../lib",
     "strict": true,
     "strictNullChecks": false,
+    "stripInternal": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
