--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "mocha",
     "schip": "schip render samples/base.waxe > samples/base.htm",
-    "docs": "typedoc waxe.d.ts --tsconfig src/tsconfig.json --options docs/options.json --theme docs/theme",
+    "docs": "typedoc ./waxe.d.ts --tsconfig ./src/tsconfig.json --options ./docs/options.json --theme ./docs/theme",
     "build:src": "rm -rf lib && tsc -b src",
     "build:dist": "browserify lib/waxe.js -s Wax > dist/waxe.js",
     "build:ugly": "uglifyjs -c 'expression=true,unsafe_proto=true,unsafe=true' -m -o dist/waxe.min.js dist/waxe.js",
