--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "mocha",
     "schip": "schip render samples/base.waxe > samples/base.htm",
-    "docs": "typedoc waxe.d.ts --tsconfig src/tsconfig.json --options docs/options.json --theme docs/theme --out docs/_dist",
+    "docs": "typedoc waxe.d.ts --tsconfig src/tsconfig.json --options docs/options.json --readme docs/index.md --theme docs/theme --out docs/_dist",
     "build:src": "rm -rf lib && tsc -b src",
     "build:dist": "browserify lib/waxe.js -s Wax > dist/waxe.js",
     "build:ugly": "uglifyjs -c 'expression=true,unsafe_proto=true,unsafe=true' -m -o dist/waxe.min.js dist/waxe.js",
@@ -33,7 +33,7 @@
   "bugs": {
     "url": "https://github.com/elcharitas/waxe/issues"
   },
-  "homepage": "https://github.com/elcharitas/waxe#readme",
+  "homepage": "https://waxe.now.sh",
   "devDependencies": {
     "@types/node": "^14.14.20",
     "typescript": "^4.0.3",
