--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "schip": "schip render samples/index.waxe > samples/index.htm",
+    "sample": "node lib/cli.js render samples/index.waxe > samples/index.htm",
     "docs": "typedoc waxe.d.ts --tsconfig src/tsconfig.json --options docs/options.json --readme docs/index.md --theme docs/theme --out docs/_dist/api",
     "build:src": "rm -rf lib && tsc -b src",
     "build:dist": "browserify lib/waxe.js -s Wax > dist/waxe.js",
@@ -42,8 +42,10 @@
     "npm-run-all": "^4.1.5",
     "typedoc": "^0.20.13",
     "git-update-ghpages": "^1.3.0",
-    "schip": "^0.0.1",
     "mocha": "^8.2.1"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "optionalDependencies": {
+    "schip": "^0.0.1"
+  }
 }
