--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "waxe": "lib/cli.js"
   },
   "scripts": {
-    "test": "mocha",
-    "lint": "eslint waxe.d.ts src",
-    "sample": "node lib/cli.js render samples/index.waxe > samples/index.htm",
-    "docs": "cd docs && node generate.js",
     "build:src": "rm -rf lib && tsc -b src",
     "build:dist": "browserify lib/waxe.js -s Wax > dist/waxe.js",
     "build:ugly": "uglifyjs -c 'expression=true,unsafe_proto=true,unsafe=true' -m -o dist/waxe.min.js dist/waxe.js",
-    "build": "run-s -s build:**",
-    "prepublishOnly": "rm -rf lib && npm run build && npm t"
+    "build": "npm run build:src && npm run build:dist && npm run build:ugly",
+    "docs": "cd docs && node generate.js",
+    "lint": "eslint waxe.d.ts src",
+    "prepublishOnly": "rm -rf lib && npm run build && npm t",
+    "sample": "node lib/cli.js render samples/index.waxe > samples/index.htm",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
     "engine",
     "laravel",
     "blade",
-    "doT"
+    "lightweight"
   ],
   "author": "Jonathan Irhodia",
   "license": "MIT",
@@ -37,16 +37,16 @@
   "homepage": "https://waxe.now.sh",
   "devDependencies": {
     "@types/node": "^14.14.20",
-    "typescript": "^4.0.3",
-    "browserify": "^17.0.0",
-    "uglify-js": "^3.11.0",
-    "npm-run-all": "^4.1.5",
-    "typedoc": "^0.20.13",
-    "eslint": "^7.17.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "browserify": "^17.0.0",
+    "eslint": "^7.17.0",
+    "git-update-ghpages": "^1.3.0",
+    "glob": "^7.1.6",
     "mocha": "^8.2.1",
-    "git-update-ghpages": "^1.3.0"
+    "typedoc": "^0.20.13",
+    "typescript": "^4.0.3",
+    "uglify-js": "^3.11.0"
   },
   "dependencies": {},
   "optionalDependencies": {
